--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "codemirror": "^5.62.2",
+    "dotenv": "^10.0.0",
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-codemirror2": "^7.2.1",
