--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-.env
 
 # testing
 /coverage
@@ -13,11 +12,16 @@
 /build
 
 # misc
+.env
+.env.example
+.env.local
+.env.staging
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
